Ignore disabled test if jvm < 16